--- a/styles/carousel/carousel.css
+++ b/styles/carousel/carousel.css
@@ -21,47 +21,46 @@
 
 .slide-text {
     position: absolute;
-    top: 150px;
-    left: 8vw;
+    top: 7.5rem;
+    left: 6rem;
     color: var(--color-content-1);
 }
 
 .slide-text h2 {
     font-family: var(--avenir-medium);
-    font-size: 42px;
+    font-size: 2rem;
     font-weight: 500;
-    line-height: 50px;
+    line-height: 2.5rem;
 }
 
 .slide-text p {
     font-family: var(--avenir-medium);
-    font-size: 16px;
+    font-size: .9rem;
     font-weight: 500;
-    margin-top: 15px;
-    line-height: 26px;
+    margin-top: .7rem;
+    line-height: 1.4rem;
 }
-/* -----circle button---- */
 
 .slick-slide img {
     height: 550px;
     width: 100%;
 }
+/* -----circle button---- */
 
 .slick-dots {
     display: flex;
     justify-content: center;
     margin: 0;
-    padding: 16px 0;
     list-style: none;
-    bottom: 18px !important;
+    bottom: 1.3rem !important;
 }
 
 .slick-dots li {
     margin: 0 0.25rem;
     border-radius: 50%;
     border: var(--color-content-1) 1px solid;
-    width: 12px !important;
-    height: 12px !important;
+    width: .7rem !important;
+    height: .7rem !important;
 }
 
 .slick-dots button {
