--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -16,6 +16,9 @@ header {
     display: flex;
     align-items: center;
 }
+.navbar-brand{
+    margin-left: 6rem;
+}
 
 /* ------------------------navigation section------------- */
 
@@ -32,40 +35,33 @@ header {
 nav {
     position: sticky !important;
     top: 0px !important;
-    width: -webkit-fill-available;
+    width: 100%;
 
 }
 
 .collapse.show {
     background-color: var(--color-content-1);
-    border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
-    margin-top: 5px;
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    margin-top: 1rem;
 
 }
 
 #navbarNav {
-    margin-right: 10px !important;
+    margin-right: 1rem !important;
 }
 
 .search-area {
-    height: 100px;
-    padding-right: 60px;
+    padding-right: 4rem;
 
-}
-
-.navbar {
-    height: 100px;
-    position: relative;
-    z-index: 2;
 }
 
 .navbar-nav {
     display: flex;
-    margin-top: 50px;
+    margin-top: 2.5rem;
 }
 .navbar-nav li {
-    margin-right: 40px;
+    margin-right: 1.5rem;
 }
 
 .navbar-nav a {
@@ -74,7 +70,7 @@ nav {
 
 .navbar-nav .nav-link.active {
     color: var(--color-primary) !important;
-    font-size: 15px;
+    font-size: .8rem;
     font-family: var(--avenir-black)
 }
 
@@ -88,22 +84,23 @@ nav {
     display: inline-block;
     position: relative;
     left: 0;
-    top: 70px;
-    right: 90px;
-    width: 50px;
-    height: 50px;
-    margin-right: 45px;
+    top: 3.4rem;
+    width: 2.6rem;
     z-index: 1000;
 }
+.search__icon {
+    height: 1.5rem;
+    margin-top: auto;
+}
 
-#toggleImage {
+/* #toggleImage {
     width: 100%;
     height: 100%;
     transition: all 0.3s ease;
-}
+} */
 
 .custom-input {
-    border-radius: 5px;
+    border-radius: 1rem;
 }
 
 /* ---------------- */
@@ -111,12 +108,7 @@ nav {
 .sm-search {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
-}
-
-.searchSection {
-    text-align: center;
-    margin-top: 50px;
+    margin-bottom: 1rem;
 }
 
 .toggle-image {
@@ -128,10 +120,9 @@ nav {
 }
 
 .search {
-    margin-top: 20px;
     position: absolute;
-    top: 115px;
-    left: 71vw !important;
+    top: 7rem;
+    right: 4.5rem !important;
     z-index: 3;
 }
 
@@ -140,14 +131,14 @@ nav {
     border: none;
     color: var(--color-content-3);
     padding: 0.7rem 1rem;
-    border-radius: 30px;
-    width: 16em;
+    border-radius: 3rem;
+    width: 15rem;
     transition: all ease-in-out .5s;
     margin-right: -2.5rem;
     font-family: var(--avenir-light);
 }
 .search__input::placeholder{
-    font-size: 13px;
+    font-size: .7rem;
 }
 
 .search__input:hover,
@@ -165,13 +156,31 @@ nav {
     background: transparent;
 }
 
-
 .search__button:hover {
     cursor: pointer;
 }
+-----
+.toggle-image {
+    width: 50px;
+    height: 50px;
+    background-image: url('./images/search.png');
+    background-size: cover;
+}
 
-.search__icon {
-    height: 28px;
-    margin-top: auto;
+.toggle-image.close {
+    background-image: url('./images/search_close.jpg');
+}
+/* ------ */
+
+#toggleButton .close-icon {
+    display: none;
+}
+
+#toggleButton.toggled .open-icon {
+    display: none;
+}
+
+#toggleButton.toggled .close-icon {
+    display: inline;
 }
 
