--- a/styles/header/medium-header.css
+++ b/styles/header/medium-header.css
@@ -1,9 +1,3 @@
-@media screen and (max-width: 300px) {
-    .logo {
-        width: 50px;
-    }
-}
-
 @media screen and (max-width: 900px) {
     .logo {
         width: 100px;
@@ -68,7 +62,7 @@
         display: block;
     }
     #toggleImage {
-        display: none2;
+        display: none !important;
     }
 }
 @media screen and (min-width: 992px) {
@@ -76,13 +70,3 @@
       display: none;
     }
   }
-
-@media screen and (max-width: 1200px) {
-    #inputBox {
-        margin-left: -101px;
-    }
-
-    .navbar-nav li{
-        margin-right: 0px !important;
-    }
-}
