--- a/styles/global-styles/buttons.css
+++ b/styles/global-styles/buttons.css
@@ -1,8 +1,4 @@
 
-/* .button-container {
-    margin-top: -6px;
-} */
-
 .button-container a {
     padding-right: 38px;
 }
@@ -43,4 +39,38 @@
     transform: rotate(130deg);
     right: 0.5rem;
     top: 8px;
+    }
+
+    /* ------ */
+
+    .button-container2 {
+        margin-top: -9px;
+        text-align: start;
+    }
+    
+    .primary-button-2 {
+        border: none;
+        padding-left: 0;
+    }
+    
+    .primary-button-2::after {
+        background-color: transparent;
+    }
+    
+    .primary-button-2 button {
+        border: 1px solid var(--color-primary);
+        background: transparent;
+        padding: 5px;
+        margin-left: 15px;
+        width: 30px;
+    }
+    
+    /* ---- */
+    
+    .buttonM:hover {
+        color: var(--color-primary);
+    }
+    
+    .buttonM:hover button {
+        border: 1px solid var(--color-content-1);
     }
