--- a/styles/menu/menu.css
+++ b/styles/menu/menu.css
@@ -1,4 +1,4 @@
-.banner-menu {
+.block-0 {
     position: relative;
     background: url('/images/banner_Menu_1920_600.jpg');
     display: flex;
@@ -7,36 +7,36 @@
     height: 600px;
 }
 
-.banner-menu .container {
+.block-0 .container {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.banner-menu .container h2,
+.block-0 .container h2,
 p {
     text-align: start;
     margin-top: 80px;
 }
 
-.banner-menu .container h2 {
+.block-0 .container h2 {
     font-family: var(--avenir-medium);
     font-size: 2.6rem;
     font-weight: 500;
     color: var(--color-secondary);
 }
 
-.banner-menu p {
+.block-0 p {
     font-size: 1.1rem;
     margin-top: 30px;
     color: #231f20;
     font-family: var(--avenir-roman);
     line-height: 28px;
 }
-.menu-txt{
+.block-txt{
     margin-left: 2rem;
 }
-.menu-img{
+.block-img{
     display: flex;
     justify-content: center;
 }
