--- a/styles/global-styles/buttons.css
+++ b/styles/global-styles/buttons.css
@@ -1,4 +1,3 @@
-
 .button-container a {
     padding-right: 38px;
 }
@@ -6,8 +5,8 @@
 .primary-button {
     display: inline-block;
     padding: 7px;
-    padding-right: 35px;
-    padding-left: .5rem;
+    padding-right: 44px;
+    padding-left: .8rem;
     background: transparent;
     color: var(--color-content-1);
     text-decoration: none;
@@ -16,62 +15,84 @@
     font-family: var(--avenir-roman);
     border: var(--color-primary) solid 1px;
     font-weight: 500;
+    cursor: pointer;
 }
+.view-btn{
+    color: var(--color-primary);
+}
+.view-btn:hover{
+    background-color: var(--color-primary);
+    color: var(--color-content-1);
 
+}
 
 .primary-button::after {
     content: "";
     position: absolute;
     width: 1px;
-    height: 29px;
+    height: 1.8rem;
     background-color: var(--color-primary);
     top: 50%;
     right: 27px;
     /* vertically center an element */
     transform: translateY(-50%);
 }
-.arr{
+
+.arr {
     display: inline;
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: .6rem;
+    width: .6rem;
     border-top: 1.5px solid var(--color-content-1);
     border-left: 1.5px solid var(--color-content-1);
     transform: rotate(130deg);
     right: 0.7rem;
-    top: 8px;
-    }
+    top: .5rem;
+}
+.arr-1{
+    border-top: 1.5px solid var(--color-primary);
+    border-left: 1.5px solid var(--color-primary);
+}
 
-    /* ------ */
+.button-container:hover .arr-1 {
+    border-top: 1.5px solid var(--color-content-1);
+    border-left: 1.5px solid var(--color-content-1);}
 
-    .button-container2 {
-        margin-top: -9px;
-        text-align: start;
-    }
-    
-    .primary-button-2 {
-        border: none;
-        padding-left: 0;
-    }
-    
-    .primary-button-2::after {
-        background-color: transparent;
-    }
-    
-    .primary-button-2 button {
-        border: 1px solid var(--color-primary);
-        background: transparent;
-        padding: 5px;
-        margin-left: 15px;
-        width: 30px;
-    }
-    
-    /* ---- */
-    
-    .buttonM:hover {
-        color: var(--color-primary);
-    }
-    
-    .buttonM:hover button {
-        border: 1px solid var(--color-content-1);
-    }
+/* ------ */
+
+.button-container2 {
+    margin-top: -9px;
+    text-align: start;
+    display: flex;
+    align-items: center;
+}
+
+.primary-button-2 {
+    border: none;
+    padding-left: 0;
+}
+
+.primary-button-2::after {
+    background-color: transparent;
+}
+/* ---- */
+
+.buttonM:hover {
+    color: var(--color-primary);
+}
+
+.buttonM:hover button {
+    border: 1px solid var(--color-content-1);
+}
+
+.image-button {
+    height:1.9rem; 
+    background: url('../../images/learnmore_banner.png') ; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    border: 1px solid var(--color-primary);
+    margin-left: 15px;
+    width: 1.9rem;
+  }
+
+  /* -- */
