--- a/styles/global-styles/color.css
+++ b/styles/global-styles/color.css
@@ -6,6 +6,7 @@
     --color-content-3: #6d6e70;
     --color-content-4: #808080;
     --color-content-5: #61d4f7;
+    --color-content-6: #002e5d;
     --color-shadow-1: #000000;
 
 }
