--- a/styles/global-styles/color.css
+++ b/styles/global-styles/color.css
@@ -8,5 +8,8 @@
     --color-content-5: #61d4f7;
     --color-content-6: #002e5d;
     --color-shadow-1: #000000;
-
+    --color-footer: #404041;
+    --color-footer-border: #f4f0ea;
+    --color-footer-sub-bg: #e6e7e8;
+    --color-footer-sub: #59595c;
 }
