--- a/styles/block-2/block-2-XL.css
+++ b/styles/block-2/block-2-XL.css
@@ -4,6 +4,12 @@
 
     }
 }
+@media screen and (min-width: 1200px) {
+    #block-2 .block-2-img {
+        margin-right: 0px;
+
+    }
+}
 @media screen and (max-width: 1400px) {
     #block-2 .block-2-img {
         margin-bottom: 50px;
