--- a/styles/block-3,4/block-3,4.css
+++ b/styles/block-3,4/block-3,4.css
@@ -20,7 +20,7 @@
 }
 
 
-#block-3-4 .nested-column-container-1 {
+#block-3-4 .event-listing-item {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,7 +29,7 @@
     margin-top: 30px;
 }
 
-#block-3-4 .nested-column-container-2 {
+#block-3-4 .event-listing-item-2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,19 +38,19 @@
     /* margin-bottom: auto; */
 }
 
-#nested-1 {
+.nested-1 {
     margin-left: auto;
     margin-right: 50px;
     margin-top: inherit;
 }
 
-#nested-2 {
+.nested-2 {
     margin-right: auto;
     width: 80%;
     margin-left: 45px;
 }
 
-.nested-column {
+.event-item {
     width: 72%;
 }
 
@@ -107,8 +107,9 @@
     display: block;
 }
 
-.block3Sub {
+.block-date {
     margin-top: 16px;
+    font-size: .8rem;
 }
 
 .nested-img {
@@ -118,7 +119,7 @@
     margin-top: 4px;
 }
 
-#nested-2 .calander-items span {
+.nested-2 .calander-items span {
     color: var( --color-content-5);
     font-size: .8rem;
 }
@@ -136,3 +137,12 @@
 .menu4Button {
     margin-top: 26px;
 }
+.block-3-subhead{
+font-size: 1.3rem;
+}
+.block-text-box{
+    margin-left: 50px;
+}
+.block-4-date{
+    color: var( --color-content-5);
+    font-size: .8rem;}
