--- a/styles/footer/footer-medium.css
+++ b/styles/footer/footer-medium.css
@@ -8,7 +8,7 @@
     }
 }
 @media screen and (max-width: 767px) {
-    .logo-part {
+    .footer-part {
         margin-bottom: 20px;
         display: flex;
         justify-content: center;
