--- a/styles/footer/footer.css
+++ b/styles/footer/footer.css
@@ -57,7 +57,7 @@
     font-size: .9rem;
     font-family: var(--avenir-medium);
 }
-.logo-part {
+.footer-part {
     border-right: 1px solid var(--color-footer-border);
     height: 153px;
     text-align: start;
@@ -96,4 +96,43 @@
 }
 .sub-footerP {
     display: contents;
+}
+#navlist{
+    display: flex;
+    gap: 5px;
+}
+#navlist li a {
+    display: block;
+    width: 100%; 
+    height: 100%;
+    text-indent: -9999px; 
+    overflow: hidden;
+  }
+#twitter {
+    background: url('../../images/social_media.png') no-repeat 0 0;
+    width: 44px;
+    height: 45px;
+  }
+#facebook {
+	background: url('../../images/social_media.png') no-repeat -52px 0;
+	width: 45px;
+	height: 45px;
+    cursor: pointer;
+}
+#youtube {
+	background: url('../../images/social_media.png') no-repeat -105px 0;
+	width: 46px;
+	height: 45px;
+    cursor: pointer;
+}
+#instagram {
+	background: url('../../images/social_media.png') no-repeat -159px 0;
+	width: 45px;
+	height: 45px;
+    cursor: pointer;
+}
+#sub-footer .sub-footerP a{
+    text-decoration: none;
+    color: var(--color-footer-sub);
+
 }
