--- a/styles/footer/footer-large.css
+++ b/styles/footer/footer-large.css
@@ -1,8 +1,8 @@
-    .bg-grey h6 {
+    .footer-area h6 {
         display: none;
     }
 
-    .bg-grey ul li a {
+    .footer-area ul li a {
         font-size: .5rem;
     }
 
