--- a/styles/block-1/block-1.css
+++ b/styles/block-1/block-1.css
@@ -13,13 +13,9 @@
 .main-card {
     margin-left: -15px;
 }
+
 #block1 h2 {
-    font-family: var(--avenir-medium);
-    font-size: 2.625rem;
-    font-weight: 500;
-    color: var(--color-secondary);
     margin-bottom: 2.3rem;
-    margin-top: -9px;
 }
 
 #block1 article .lorem-page {
@@ -42,6 +38,8 @@
     font-family: var(--avenir-book);
     font-size: .8rem;
     text-transform: uppercase;
+    margin-left: 25px;
+    margin-bottom: 20px;
 }
 
 .lorem-p1 {
@@ -49,9 +47,10 @@
     font-size: 1.3rem;
     color: var(--color-content-1);
     line-height: 1.7rem;
-    width: 110% !important;
+    width: 100% !important;
     margin-top: -11px;
 }
+
 .lorem-div {
     display: flex;
     align-items: center;
@@ -64,6 +63,13 @@
     width: 110%;
     line-height: 26px;
     margin-top: -3px;
+    margin-left: 25px;
+}
+
+.lorem-p2 a {
+    text-decoration: none;
+    color: var(--color-content-1);
+
 }
 
 .lorem-text {
@@ -78,7 +84,8 @@
 .text-box {
     width: auto !important;
     margin-left: 5px;
-    height: 100%; /* Ensure the container takes full height */
+    height: 100%;
+    /* Ensure the container takes full height */
 
 }
 
@@ -97,9 +104,13 @@
     text-align: start;
 }
 
-.report-txt2 p {
+.report-txt2 a {
     margin-bottom: 8px;
+    text-decoration: none;
+    color: var(--color-secondary);
+
 }
+
 .column-1 {
     margin-bottom: 2.5rem;
     display: flex;
