--- a/styles/footer/footer.css
+++ b/styles/footer/footer.css
@@ -1,19 +1,20 @@
-.bg-grey {
+.footer-area {
     background: var(--color-footer);
 }
 
-.bg-grey {
+.footer-area {
     color: var(--color-content-1);
     display: flex;
     text-align: center;
 }
 
-.bg-grey h6 {
+.footer-area h6 {
     position: relative;
     font-size: 1rem;
     font-family: var(--avenir-black);
     color: var(--color-content-1);
 }
+
 .footer-div {
     margin-top: -10px;
     margin-bottom: -10px;
@@ -44,19 +45,20 @@
     font-family: var(--avenir-medium);
 }
 
-.bg-grey ul li {
+.footer-area ul li {
     list-style: none;
     display: block;
     margin-bottom: -5px;
 }
 
-.bg-grey ul li a {
+.footer-area ul li a {
     text-decoration: none;
     color: var(--color-content-1);
     text-decoration: none;
     font-size: .9rem;
     font-family: var(--avenir-medium);
 }
+
 .footer-part {
     border-right: 1px solid var(--color-footer-border);
     height: 153px;
@@ -71,6 +73,7 @@
     gap: 20px;
     height: auto;
 }
+
 #social-media h5 {
     font-size: 1rem;
     font-family: var(--avenir-black);
@@ -84,6 +87,7 @@
     flex-direction: column;
     padding-left: 50px;
 }
+
 #sub-footer {
     display: flex;
     justify-content: center;
@@ -94,45 +98,38 @@
     background: var(--color-footer-sub-bg);
     font-family: var(--avenir-roman);
 }
+
 .sub-footerP {
     display: contents;
 }
-#navlist{
+
+#navlist {
     display: flex;
     gap: 5px;
 }
-#navlist li a {
-    display: block;
-    width: 100%; 
-    height: 100%;
-    text-indent: -9999px; 
-    overflow: hidden;
-  }
-#twitter {
+.social-icon {
     background: url('../../images/social_media.png') no-repeat 0 0;
-    width: 44px;
+    cursor: pointer;
     height: 45px;
-  }
-#facebook {
-	background: url('../../images/social_media.png') no-repeat -52px 0;
-	width: 45px;
-	height: 45px;
-    cursor: pointer;
+    width: 45px;
 }
-#youtube {
-	background: url('../../images/social_media.png') no-repeat -105px 0;
-	width: 46px;
-	height: 45px;
-    cursor: pointer;
+
+.twitter {
+    background-position: 0 0;
 }
-#instagram {
-	background: url('../../images/social_media.png') no-repeat -159px 0;
-	width: 45px;
-	height: 45px;
-    cursor: pointer;
+
+.facebook {
+    background-position: -52px 0;
 }
-#sub-footer .sub-footerP a{
+
+.youtube {
+    background-position: -105px 0;
+}
+
+.instagram {
+    background-position: -159px 0;
+}
+#sub-footer .sub-footerP a {
     text-decoration: none;
     color: var(--color-footer-sub);
-
 }
