--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -70,7 +70,7 @@ nav {
 
 .navbar-nav .nav-link.active {
     color: var(--color-primary) !important;
-    font-size: .8rem;
+    font-size: 15px;
     font-family: var(--avenir-black)
 }
 
